--- a/projects/web/src/app/admin/nav-items/list/list.component.html
+++ b/projects/web/src/app/admin/nav-items/list/list.component.html
@@ -11,12 +11,11 @@
         <ng-template #cardExtra>
           <nz-button-group>
             <button *ngIf="info.privileges['app_nav_items.create']"
-              nz-button nzType="primary"
-              type="button"
+              type="button" nz-button nzType="primary"
               (click)="showDetail('0', true)">
               <svg-icon class="me-1" iconPath="bi/plus"></svg-icon> 新建菜单项
             </button>
-            <button nz-button nzType="default"
+            <button type="button" nz-button nzType="default"
               (click)="vm.search()">
               <svg-icon class="me-1" iconPath="bi/arrow-repeat"></svg-icon> 刷新
             </button>
@@ -26,7 +25,7 @@
           <nz-table nzSize="small" [nzFrontPagination]="false"
             [nzShowSizeChanger]="true"
             [nzShowPagination]="true"
-            [nzShowQuickJumper]="vm.showPagination"
+            [nzShowQuickJumper]="true"
             [nzData]="data"
             [nzTotal]="(vm.total | async)!"
             [nzShowTotal]="totalTpl"
