--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -1,110 +1,83 @@
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a routerLink="/">首页</a></li>
-    <li class="breadcrumb-item"><a routerLink="/admin">管理</a></li>
-    <li class="breadcrumb-item active" aria-current="page">用户管理</li>
-  </ol>
-</nav>
+<nz-breadcrumb class="m-3">
+  <nz-breadcrumb-item><a routerLink="/">首页</a></nz-breadcrumb-item>
+  <nz-breadcrumb-item><a routerLink="/admin">管理</a></nz-breadcrumb-item>
+  <nz-breadcrumb-item>用户管理</nz-breadcrumb-item>
+</nz-breadcrumb>
 <div class="container-fluid">
   <div class="row g-2">
     <div class="col-2">
-      <div class="card h-100">
-          <div class="card-header d-flex justify-content-between">
-              <h5 class="card-title mb-0">组织单元</h5>
-              <div class="btn-group btn-group-sm">
-                <button type="button" class="btn btn-outline-secondary"
-                  (click)="loadOrganizeUnit()">
-                  <svg-icon iconPath="bi/arrow-repeat"></svg-icon>
-                </button>
-              </div>
-          </div>
-          <div *ngIf="(organizeUnitSvc.treeNodes | async) as treeNodes">
-            <nz-tree [nzData]="treeNodes" (nzClick)="onOrganizeUnitClick($event)"></nz-tree>
-          </div>
-      </div>
+      <nz-card nzTitle="组织单元" [nzExtra]="orgUnitExtraTpl" [nzBodyStyle]="{ padding: '0.25rem' }">
+        <ng-template #orgUnitExtraTpl>
+          <button class="px-2" type="button" nz-button nzType="default"
+            (click)="loadOrganizeUnit()">
+            <svg-icon iconPath="bi/arrow-repeat"></svg-icon>
+          </button>
+        </ng-template>
+        <ng-container *ngIf="(organizeUnitSvc.treeNodes | async) as treeNodes">
+          <nz-tree [nzData]="treeNodes" (nzClick)="onOrganizeUnitClick($event)"></nz-tree>
+        </ng-container>
+      </nz-card>
     </div>
     <div class="col">
-      <div class="card" *ngIf="(account.info | async) as info">
-        <div class="card-header d-flex justify-content-between">
-            <h5 class="card-title mb-0">用户</h5>
-            <div class="btn-group btn-group-sm">
-              <button *ngIf="info.privileges['app_users.create']" type="button" class="btn btn-outline-primary"
-                (click)="showDetail('0', true)">
-                <svg-icon iconPath="bi/plus"></svg-icon> 新建用户
-              </button>
-              <button type="button" class="btn btn-outline-secondary"
-                (click)="loadData()">
-                <svg-icon iconPath="bi/arrow-repeat"></svg-icon> 刷新
-              </button>
-            </div>
-        </div>
-        <form class="p-2 bg-light">
-          <div class="row">
-            <div class="col-6">
-              <div class="row g-0 align-items-center">
-                <label for="pageSize" class="col-auto col-form-label col-form-label-sm">
-                  显示：
-                </label>
-                <div class="col-auto">
-                  <select id="pageSize" name="pageSize"
-                    class="form-select form-select-sm"
-                    [(ngModel)]="vm.searchModel.take"
-                    (change)="vm.onPageSizeChange()">
-                    <option [value]="5">5</option>
-                    <option [value]="10">10</option>
-                    <option [value]="25">25</option>
-                    <option [value]="50">50</option>
-                    <option [value]="100">100</option>
-                  </select>
-                </div>
-                <div class="col-auto text-muted px-2 py-1">条记录</div>
-                <div class="col-auto text-muted px-2">
-                  <ng-container *ngIf="vm.loading">
-                    <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
-                  </ng-container>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row g-0">
-                <div class="col-2"></div>
-                <div class="col">
-                  <select class="form-select form-select-sm" name="roleName"
-                    [(ngModel)]="vm.searchModel.roleName" (change)="research()">
-                    <option value="">全部用户</option>
-                    <option *ngFor="let r of vm.roles | async" [value]="r.name">
-                      {{r.description || r.name}} ({{r.userCount}})
-                    </option>
-                  </select>
-                </div>
-                <div class="col">
-                  <div class="input-group input-group-sm">
-                    <input class="form-control" name="userName" type="text"
-                      placeholder="按用户名搜索"
-                      [(ngModel)]="vm.searchModel.userName"
-                      (keyup.enter)="vm.search()" />
-                    <button class="btn btn-sm btn-outline-secondary" type="button"
-                      *ngIf="vm.searchModel.userName" (click)="cleanUserSearch()">
-                      <svg-icon iconPath="bi/x"></svg-icon>
-                    </button>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="input-group input-group-sm ms-2">
-                    <select class="form-select" name="sortBy" [(ngModel)]="vm.searchModel.sortBy"
-                      (change)="vm.search()">
-                      <option *ngFor="let sm of vm.sortMethods" [value]="sm.value">
-                        {{sm.text}}
-                      </option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </form>
-        <div class="table-responsive">
-          <table class="table table-striped mb-0">
+      <nz-card *ngIf="(account.info | async) as info"
+        class="ant-card-data-list" nzTitle="用户" [nzExtra]="cardExtraTpl">
+        <ng-template #cardExtraTpl>
+          <form nz-form>
+            <nz-space>
+              <nz-input-group *nzSpaceItem nzSearch [nzAddOnAfter]="userNameAddOnTpl">
+                <input name="userName" type="text" nz-input
+                  placeholder="按用户名搜索"
+                  [(ngModel)]="vm.searchModel.userName"
+                  (keyup.enter)="vm.search()"
+                />
+                <ng-template #userNameAddOnTpl>
+                  <button *ngIf="vm.searchModel.userName"
+                    class="px-2" type="button" nz-button nzType="default"
+                    (click)="cleanUserSearch()">
+                    <svg-icon iconPath="bi/x"></svg-icon>
+                  </button>
+                  <button class="px-2" type="button" nz-button nzType="default" nzSearch>
+                    <svg-icon iconPath="bi/search"></svg-icon>
+                  </button>
+                </ng-template>
+              </nz-input-group>
+              <nz-select *nzSpaceItem name="roleName"
+                [(ngModel)]="vm.searchModel.roleName" (ngModelChange)="research()">
+                <nz-option nzValue="" nzLabel="全部用户"></nz-option>
+                <nz-option *ngFor="let r of vm.roles | async"
+                  [nzValue]="r.name"
+                  [nzLabel]="r.description || r.name + '(' + r.userCount + ')'">
+                </nz-option>
+              </nz-select>
+              <nz-select *nzSpaceItem name="sortBy" [(ngModel)]="vm.searchModel.sortBy"
+                (ngModelChange)="vm.search()">
+                <nz-option *ngFor="let sm of vm.sortMethods"
+                  [nzValue]="sm.value" [nzLabel]="sm.text">
+                </nz-option>
+              </nz-select>
+              <nz-button-group *nzSpaceItem>
+                <button *ngIf="info.privileges['app_users.create']"
+                  type="button" nz-button nzType="primary"
+                  (click)="showDetail('0', true)">
+                  <svg-icon class="me-1" iconPath="bi/plus"></svg-icon> 新建用户
+                </button>
+                <button type="button" nz-button nzType="default" (click)="vm.search()">
+                  <svg-icon class="me-1" iconPath="bi/arrow-repeat"></svg-icon> 刷新
+                </button>
+              </nz-button-group>
+            </nz-space>
+          </form>
+        </ng-template>
+        <div class="table-responsive" *ngIf="(vm.data | async) as data">
+          <nz-table nzSize="small" [nzFrontPagination]="false"
+            [nzShowSizeChanger]="true"
+            [nzShowPagination]="true"
+            [nzShowQuickJumper]="true"
+            [nzData]="data"
+            [nzTotal]="(vm.total | async)!"
+            [nzShowTotal]="totalTpl"
+            [nzLoading]="vm.loading"
+            (nzQueryParams)="loadData($event)">
             <thead>
               <tr>
                 <th scope="col" class="text-end table-row-num-col">#</th>
@@ -116,7 +89,7 @@
                 <th scope="col" class="text-center text-nowrap text-muted table-action-col-2">操作</th>
               </tr>
             </thead>
-            <tbody *ngIf="(vm.data | async) as data">
+            <tbody>
               <tr *ngFor="let item of data; let i = index;">
                 <th scope="row" class="text-end">{{i + 1}}</th>
                 <td class="text-start">
@@ -129,90 +102,60 @@
                 <td class="text-center">{{item.lastLogin | date:'yyyy-MM-dd HH:mm:ss'}}</td>
                 <td class="text-end">{{item.loginCount}}</td>
                 <td class="text-center">
-                  <div class="btn-group btn-group-sm">
-                    <button class="btn btn-outline-secondary" type="button"
-                      *ngIf="info.privileges['app_users.read']"
-                      ngbTooltip="详情" placement="top" [openDelay]="300"
+                  <nz-button-group>
+                    <button *ngIf="info.privileges['app_users.read']"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="详情" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, false)">
                       <svg-icon iconPath="bi/info-square"></svg-icon>
                     </button>
-                    <div class="btn-group btn-group-sm" *ngIf="canViewGears()"
-                      ngbDropdown container="body">
-                      <button class="btn btn-outline-secondary" type="button"
-                        ngbTooltip="用户操作" placement="top" container="body" [openDelay]="300"
-                        ngbDropdownToggle>
-                        <svg-icon iconPath="bi/three-dots"></svg-icon>
-                      </button>
-                      <div class="dropdown-menu" ngbDropdownMenu>
-                        <button class="text-muted" type="button" ngbDropdownItem
-                          *ngIf="info.privileges['app_users.update']"
+                    <button *ngIf="canViewGears()"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="详情" nzTooltipPlacement="top"
+                      nz-dropdown nzTrigger="click" [nzDropdownMenu]="userMenuTpl">
+                      <svg-icon iconPath="bi/three-dots"></svg-icon>
+                    </button>
+                    <nz-dropdown-menu #userMenuTpl="nzDropdownMenu">
+                      <div nz-menu>
+                        <li nz-menu-item *ngIf="info.privileges['app_users.update']"
                           (click)="showDetail(item.id, true)">
-                          <svg-icon iconPath="bi/pencil-square"></svg-icon> 编辑
-                        </button>
-                        <ng-container *ngIf="isLockout(item);else lockTpl">
-                          <button class="text-muted" type="button" ngbDropdownItem
-                            *ngIf="info.privileges['app_users.unlock']"
+                          <svg-icon class="me-2" iconPath="bi/pencil-square"></svg-icon> 编辑
+                        </li>
+                        @if (isLockout(item)) {
+                          <li nz-menu-item *ngIf="info.privileges['app_users.unlock']"
                             (click)="vm.unlockUser(item.id)">
-                            <svg-icon iconPath="bi/unlock"></svg-icon> 解锁
-                          </button>
-                        </ng-container>
-                        <ng-template #lockTpl>
-                          <button class="text-muted" type="button" ngbDropdownItem
-                            *ngIf="info.privileges['app_users.lock']"
+                            <svg-icon class="me-2" iconPath="bi/unlock"></svg-icon> 解锁
+                          </li>
+                        } @else {
+                          <li nz-menu-item *ngIf="info.privileges['app_users.lock']"
                             (click)="showLock(item)">
-                            <svg-icon iconPath="bi/lock"></svg-icon> 锁定
-                          </button>
-                        </ng-template>
-                        <button class="text-muted" type="button" ngbDropdownItem
-                          *ngIf="info.privileges['app_users.reset_pass']"
+                            <svg-icon class="me-2" iconPath="bi/lock"></svg-icon> 锁定
+                          </li>
+                        }
+                        <li nz-menu-item *ngIf="info.privileges['app_users.reset_pass']"
                           (click)="showPassword(item)">
-                          <svg-icon iconPath="bi/key"></svg-icon> 重置密码
-                        </button>
-                        <button class="text-muted" type="button" ngbDropdownItem
-                          *ngIf="info.privileges['app_users.read_user_roles']"
+                          <svg-icon class="me-2" iconPath="bi/key"></svg-icon> 重置密码
+                        </li>
+                        <li nz-menu-item *ngIf="info.privileges['app_users.read_user_roles']"
                           (click)="showRoles(item)">
-                          <svg-icon iconPath="bi/shield-check"></svg-icon> 角色
-                        </button>
-                        <button class="text-muted" type="button" ngbDropdownItem
-                          *ngIf="info.privileges['app_users.delete']"
+                          <svg-icon class="me-2" iconPath="bi/shield-check"></svg-icon> 角色
+                        </li>
+                        <li nz-menu-item *ngIf="info.privileges['app_users.delete']"
                           (click)="delete(item.id)">
-                          <svg-icon iconPath="bi/trash"></svg-icon> 删除
-                        </button>
+                          <svg-icon class="me-2" iconPath="bi/trash"></svg-icon> 删除
+                        </li>
                       </div>
-                    </div>
-                  </div>
+                    </nz-dropdown-menu>
+                  </nz-button-group>
                 </td>
               </tr>
             </tbody>
-          </table>
+          </nz-table>
         </div>
-        <div class="card-footer">
-          <div *ngIf="(vm.data | async) as data" class="row g-0">
-            <div class="col-6 d-flex align-items-center">
-              <div [class]="data.length > 0 ? 'text-muted' : 'text-warning'">
-                <ng-container *ngIf="data.length > 0;else emptyTpl">
-                  显示 {{vm.total | async}} 条记录中的第 {{vm.searchModel.skip + 1}} 至 {{vm.searchModel.skip + data.length}} 条
-                </ng-container>
-                <ng-template #emptyTpl>无数据！</ng-template>
-              </div>
-            </div>
-            <div class="col-6">
-              <ngb-pagination *ngIf="vm.showPagination"
-                class="d-flex justify-content-end"
-                size="sm"
-                [collectionSize]="(vm.total | async) || 0"
-                [page]="(vm.searchModel.skip / vm.searchModel.take) + 1"
-                [pageSize]="vm.searchModel.take"
-                [maxSize]="5"
-                [rotate]="true"
-                [boundaryLinks]="true"
-                [ellipses]="true"
-                (pageChange)="vm.onPageChange($event)">
-              </ngb-pagination>
-            </div>
-          </div>
-        </div>
-      </div>
+      </nz-card>
+      <ng-template #totalTpl let-total let-range="range">
+        当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
+      </ng-template>
     </div>
   </div>
 </div>
