--- a/projects/web/src/app/admin/roles/list/list.component.html
+++ b/projects/web/src/app/admin/roles/list/list.component.html
@@ -1,106 +1,92 @@
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a routerLink="/">首页</a></li>
-    <li class="breadcrumb-item"><a routerLink="/admin">管理</a></li>
-    <li class="breadcrumb-item active" aria-current="page">角色</li>
-  </ol>
-</nav>
+<nz-breadcrumb class="m-3">
+  <nz-breadcrumb-item><a routerLink="/">首页</a></nz-breadcrumb-item>
+  <nz-breadcrumb-item><a routerLink="/admin">管理</a></nz-breadcrumb-item>
+  <nz-breadcrumb-item>角色</nz-breadcrumb-item>
+</nz-breadcrumb>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12">
-      <div *ngIf="(account.info | async) as info" class="card">
-        <div class="card-header d-flex justify-content-between">
-          <h5 class="card-title mb-0">角色</h5>
-          <div class="btn-group btn-group-sm">
-            <button *ngIf="info.privileges['app_roles.create']" type="button" class="btn btn-outline-primary"
+    <div class="col">
+      <nz-card *ngIf="(account.info | async) as info"
+        class="ant-card-data-list" nzTitle="角色" [nzExtra]="cardExtra">
+        <ng-template #cardExtra>
+          <nz-button-group>
+            <button *ngIf="info.privileges['app_roles.create']"
+              type="button" nz-button nzType="primary"
               (click)="showDetail('0', true)">
-              <svg-icon iconPath="bi/plus"></svg-icon> 新建角色
+              <svg-icon class="me-1" iconPath="bi/plus"></svg-icon> 新建角色
             </button>
-            <button type="button" class="btn btn-outline-secondary"
-              (click)="loadData()">
-              <svg-icon iconPath="bi/arrow-repeat"></svg-icon> 刷新
+            <button type="button" nz-button nzType="default"
+              (click)="vm.search()">
+              <svg-icon class="me-1" iconPath="bi/arrow-repeat"></svg-icon> 刷新
             </button>
-          </div>
-        </div>
-        <form class="p-2 bg-light">
-          <div class="row">
-            <div class="col-6">
-              <div class="row g-0 align-items-center">
-                <div class="col-auto text-muted px-2 py-1">全部角色， 共 {{vm.total | async}} 条记录</div>
-                <div class="col-auto text-muted px-2">
-                  <ng-container *ngIf="vm.loading">
-                    <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
-                  </ng-container>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row g-0">
-                <div class="col-6">
-                  <!-- <span class="text-muted">其它工具栏</span> -->
-                </div>
-                <div class="col-6">
-                  <!-- <span class="text-muted">其它工具栏</span> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </form>
-        <div class="table-responsive">
-          <table class="table table-striped mb-0">
+          </nz-button-group>
+        </ng-template>
+        <div class="table-responsive" *ngIf="(vm.data | async) as data">
+          <nz-table nzSize="small" [nzFrontPagination]="false"
+            [nzShowSizeChanger]="true"
+            [nzShowPagination]="false"
+            [nzShowQuickJumper]="true"
+            [nzData]="data"
+            [nzTotal]="(vm.total | async)!"
+            [nzShowTotal]="totalTpl"
+            [nzLoading]="vm.loading"
+            (nzQueryParams)="loadData($event)">
             <thead>
               <tr>
-                <th scope="col" class="text-end text-nowrap text-muted table-row-num-col">#</th>
-                <th scope="col" class="text-start text-nowrap text-muted">名称</th>
-                <th scope="col" class="text-start text-nowrap text-muted">描述</th>
-                <th scope="col" class="text-center text-nowrap text-muted">是否默认</th>
-                <th scope="col" class="text-center text-nowrap text-muted">是否匿名</th>
-                <th scope="col" class="text-end text-nowrap text-muted">用户数</th>
-                <th scope="col" class="text-center text-nowrap text-muted table-action-col-4">操作</th>
+                <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
+                <th scope="col" class="text-start text-nowrap">名称</th>
+                <th scope="col" class="text-start text-nowrap">描述</th>
+                <th scope="col" class="text-center text-nowrap">是否默认</th>
+                <th scope="col" class="text-center text-nowrap">是否匿名</th>
+                <th scope="col" class="text-end text-nowrap">用户数</th>
+                <th scope="col" class="text-center text-nowrap table-action-col-4">操作</th>
               </tr>
             </thead>
-            <tbody *ngIf="(vm.data | async) as data">
+            <tbody>
               <tr *ngFor="let item of data; let i = index;">
-                <th scope="row" class="text-end text-muted">{{i+1+vm.searchModel.skip}}</th>
+                <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
                 <td class="text-start">{{item.name}}</td>
                 <td class="text-start">{{item.description}}</td>
                 <td class="text-center">{{item.isDefault ? '是' : '否'}}</td>
                 <td class="text-center">{{item.isAnonymous ? '是' : '否'}}</td>
                 <td class="text-end"><a [routerLink]="['../users', {roleName: item.name}]">{{item.userCount}}</a></td>
                 <td class="text-center">
-                  <div class="btn-group btn-group-sm">
+                  <nz-button-group>
                     <button *ngIf="info.privileges['app_roles.read']"
-                      class="btn btn-outline-secondary" ngbTooltip="详情"
-                      placement="top" [openDelay]="300" container="body"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="详情" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, false)">
                       <svg-icon iconPath="bi/info-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_roles.update']"
-                      class="btn btn-outline-secondary" ngbTooltip="编辑"
-                      placement="top" [openDelay]="300" container="body"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="编辑" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, true)">
                       <svg-icon iconPath="bi/pencil-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_roles.read_role_privileges']"
-                      class="btn btn-outline-secondary" ngbTooltip="角色权限"
-                      placement="top" [openDelay]="300" container="body"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="角色权限" nzTooltipPlacement="top"
                       (click)="showPrivileges(item)">
                       <svg-icon iconPath="bi/shield-lock"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_roles.delete']"
-                      class="btn btn-outline-secondary" ngbTooltip="删除"
-                      placement="top" [openDelay]="300" container="body"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="删除" nzTooltipPlacement="top"
                       (click)="delete(item.id)"
                       [disabled]="$any(item.userCount) > 0">
                       <svg-icon iconPath="bi/trash"></svg-icon>
                     </button>
-                  </div>
+                  </nz-button-group>
                 </td>
               </tr>
             </tbody>
-          </table>
+          </nz-table>
         </div>
-      </div>
+      </nz-card>
+      <ng-template #totalTpl let-total let-range="range">
+        当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
+      </ng-template>
     </div>
   </div>
 </div>
