--- a/projects/web/src/app/admin/roles/privilege/privilege.component.html
+++ b/projects/web/src/app/admin/roles/privilege/privilege.component.html
@@ -1,23 +1,23 @@
-<form class="card privileges" #privilegeForm="ngForm">
-  <div class="card-header d-flex justify-content-between align-content-center">
-    <h5 class="card-title mb-0">{{title}}</h5>
-    <div class="btn-group btn-group-sm">
-      <button type="button" class="btn btn-sm btn-outline-primary" (click)="cancel()">
-        <svg-icon iconPath="bi/check"></svg-icon> 确定
+<nz-card class="ant-card-data-detail m-0"
+  [nzTitle]="title" [nzExtra]="toolsTpl">
+  <ng-template #toolsTpl>
+    <nz-button-group>
+      <button type="button" nz-button nzType="default" (click)="close()">
+        <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 确定
       </button>
-    </div>
-  </div>
-  <div class="card-body">
-    <div class="mb-3" *ngFor="let mp of vm.privileges">
-      <h6 class="" for="">{{mp.module}}</h6>
-      <div class="form-check form-check-inline" *ngFor="let p of mp.privileges">
-        <input class="form-check-input" type="checkbox" [name]="p.name" [id]="p.id"
-          [value]="p.name" [checked]="vm.rolePrivileges[p.name]"
-          (click)="togglePrivilege($event)" />
-        <label class="form-check-label" [for]="p.id">
+    </nz-button-group>
+  </ng-template>
+  <form nz-form nzLayout="vertical" #privilegeForm="ngForm">
+    <nz-form-item *ngFor="let mp of vm.privileges">
+      <h6>{{mp.module}}</h6>
+      <div>
+        <label *ngFor="let p of mp.privileges" class="m-0"
+          [for]="p.id" nz-checkbox [nzValue]="p.name"
+          [nzChecked]="vm.rolePrivileges[p.name]"
+          (nzCheckedChange)="togglePrivilege(p.name)">
           {{p.description || p.name}}
         </label>
       </div>
-    </div>
-  </div>
-</form>
+    </nz-form-item>
+  </form>
+</nz-card>
