--- a/projects/web/src/app/admin/roles/detail/detail.component.html
+++ b/projects/web/src/app/admin/roles/detail/detail.component.html
@@ -47,7 +47,7 @@
         <nz-form-item>
           <label nz-checkbox nzId="isAnonymous" for="isAnonymous" id="isAnonymous"
             name="isAnonymous" [(ngModel)]="model.isAnonymous" [nzDisabled]="!editable">
-            是否默认
+            是否匿名
           </label>
         </nz-form-item>
       </div>
