--- a/projects/web/src/app/admin/nav-items/list/list.component.html
+++ b/projects/web/src/app/admin/nav-items/list/list.component.html
@@ -21,7 +21,7 @@
             </button>
           </nz-button-group>
         </ng-template>
-        <div class="table-responsive" *ngIf="(vm.data | async) as data">
+        <ng-container *ngIf="(vm.data | async) as data">
           <nz-table nzSize="small" [nzFrontPagination]="false"
             [nzShowSizeChanger]="true"
             [nzShowPagination]="true"
@@ -30,9 +30,11 @@
             [nzTotal]="(vm.total | async)!"
             [nzShowTotal]="totalTpl"
             [nzLoading]="vm.loading"
+            [nzPageSize]="vm.pageSize"
+            [nzPageSizeOptions]="vm.pageSizeOptions"
             (nzQueryParams)="loadData($event)">
             <thead>
-              <tr>
+              <tr class="sticky-top">
                 <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
                 <th scope="col" class="text-start text-nowrap">标题</th>
                 <th scope="col" class="text-start text-nowrap">提示文字</th>
@@ -75,7 +77,7 @@
               </tr>
             </tbody>
           </nz-table>
-        </div>
+        </ng-container>
       </nz-card>
       <ng-template #totalTpl let-total let-range="range">
         当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
